Added Words and OpenCalculator, fixed order of expected/actual results in tests