@@ -1,6 +1,5 @@
 package com.forketyfork.yandexalgo.assignment3;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 import lombok.AllArgsConstructor;
@@ -9,31 +8,31 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-class UniqueTest {
+class OpenCalculatorTest {
 
     @AllArgsConstructor
     private static class TestCase {
 
         private final List<Integer> numbers;
+        private final int n;
         private final int expected;
 
     }
 
     public static Stream<TestCase> source() {
         return Stream.of(
-                new TestCase(List.of(1, 2, 3, 2, 1), 3),
-                new TestCase(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10), 10),
-                new TestCase(List.of(1, 2, 3, 4, 5, 1, 2, 1, 2, 7, 3), 6),
-                new TestCase(Collections.emptyList(), 0),
-                new TestCase(Collections.singletonList(1), 1),
-                new TestCase(List.of(1, 1), 1)
+                new TestCase(List.of(1, 2, 3), 1123, 0),
+                new TestCase(List.of(1, 2, 3), 1001, 1),
+                new TestCase(List.of(5, 7, 3), 123, 2),
+                new TestCase(List.of(), 123, 3),
+                new TestCase(List.of(0), 0, 0)
         );
     }
 
     @ParameterizedTest
     @MethodSource("source")
     void test(TestCase testCase) {
-        assertThat(Unique.uniqueNumbers(testCase.numbers)).isEqualTo(testCase.expected);
+        assertThat(OpenCalculator.missingCount(testCase.numbers, testCase.n)).isEqualTo(testCase.expected);
     }
 
 }
